--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -193,7 +193,7 @@
     --primary-100: #4A91A7;
     --primary-400: #497cf4;
     --primary-500: #497cf4;
-    --primary-600: #0000DF;
+    --primary-600: #7aa6ff;
     --dark-100: #9d99990f;
     --dark-500: #65758b;
     --dark-600: #121212;
