--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11591,11 +11591,11 @@ button.show {
     width: 100%;
     height: 54px;
     background-color: transparent;
-    border: 1px solid #000;
-    border-top: none;
+    border: 1px solid #d1d1d1;
+    /* border-top: none;
     border-left: none;
-    border-right: none;
-    border-radius: 0 0 5px 0;
+    border-right: none; */
+    border-radius:5px;
     padding: 10px 7px;
     color: #000;
     font-weight: bolder;
@@ -11656,7 +11656,7 @@ button.show {
     right: 0;
     background-color:#497cf4;
     color: #fff;
-    border-radius: 5px;
+    border-radius: 7px;
     width: 100px;
     height: 54px;
     padding: 15px 10px;
@@ -11666,7 +11666,7 @@ button.show {
         background-position: 85% 53%; */
     cursor: pointer;
     font-weight: bolder;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #d1d1d1;
 }
 
 .service-charge-wrap .charge-form .form-group select option{
