--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11590,7 +11590,7 @@ button.show {
 .service-charge-wrap .charge-form .form-group input {
     width: 100%;
     height: 54px;
-    background-color: transparent;
+    background-color: #f8fafc;
     border: 1px solid #d1d1d1;
     /* border-top: none;
     border-left: none;
@@ -11654,8 +11654,8 @@ button.show {
     position: absolute;
     bottom: 0;
     right: 0;
-    background-color:#497cf4;
-    color: #fff;
+    background-color:#f8fafc;
+    color: #000;
     border-radius: 7px;
     width: 100px;
     height: 54px;
@@ -11666,7 +11666,7 @@ button.show {
         background-position: 85% 53%; */
     cursor: pointer;
     font-weight: bolder;
-    border-bottom: 1px solid #d1d1d1;
+    border: 1px solid #d1d1d1;
 }
 
 .service-charge-wrap .charge-form .form-group select option{
